--- a/editor/serial/CMakeLists.txt
+++ b/editor/serial/CMakeLists.txt
@@ -3,6 +3,7 @@ target_sources(ChokoEditor PRIVATE
 	${CMAKE_CURRENT_SOURCE_DIR}/serialized_component.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/serialized_item.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/serialized_object.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/serialized_prefab.cpp
 )
 
 add_subdirectory(comp)
