--- a/editor/serial/CMakeLists.txt
+++ b/editor/serial/CMakeLists.txt
@@ -4,6 +4,7 @@ target_sources(ChokoEditor PRIVATE
 	${CMAKE_CURRENT_SOURCE_DIR}/serialized_item.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/serialized_object.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/serialized_prefab.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/serialized_prefab_ext.cpp
 )
 
 add_subdirectory(comp)
