--- a/editor/CMakeLists.txt
+++ b/editor/CMakeLists.txt
@@ -8,6 +8,7 @@ add_subdirectory(asset)
 add_subdirectory(exporters)
 add_subdirectory(ext)
 add_subdirectory(hooks)
+add_subdirectory(preview)
 add_subdirectory(res)
 add_subdirectory(scene)
 add_subdirectory(scripting)
