--- a/src/asset/prefab/CMakeLists.txt
+++ b/src/asset/prefab/CMakeLists.txt
@@ -1,5 +1,6 @@
 target_sources(ChokoEngine PRIVATE
 	${CMAKE_CURRENT_SOURCE_DIR}/prefab_comp.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/prefab_inc.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/prefab_item.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/prefab_link.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/prefab_mod.cpp
@@ -7,3 +8,5 @@ target_sources(ChokoEngine PRIVATE
 	${CMAKE_CURRENT_SOURCE_DIR}/prefab_objbase.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/prefab_objref.cpp
 )
+
+add_subdirectory(comp)
