assettype in asset, prefab_link impl 1, rename some class to namespace

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,7 @@
 target_sources(ChokoEngine PRIVATE
 	${CMAKE_CURRENT_SOURCE_DIR}/chokoengine.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/chokolait.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/object_base.cpp
 )
 
 add_subdirectory(3rdparty)
