--- a/src/scene/CMakeLists.txt
+++ b/src/scene/CMakeLists.txt
@@ -1,8 +1,7 @@
 target_sources(ChokoEngine PRIVATE
 	${CMAKE_CURRENT_SOURCE_DIR}/component.cpp
-	${CMAKE_CURRENT_SOURCE_DIR}/object_base.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/scene.cpp
-	${CMAKE_CURRENT_SOURCE_DIR}/sceneobject.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/scene_object.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/transform.cpp
 )
 
