prefab list now work properly i think

--- a/editor/utils/CMakeLists.txt
+++ b/editor/utils/CMakeLists.txt
@@ -1,4 +1,5 @@
 target_sources(ChokoEditor PRIVATE
+	${CMAKE_CURRENT_SOURCE_DIR}/debug2.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/glutils.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/meshutils.cpp
 )
