--- a/editor/asset/CMakeLists.txt
+++ b/editor/asset/CMakeLists.txt
@@ -1,6 +1,7 @@
 target_sources(ChokoEditor PRIVATE
 	${CMAKE_CURRENT_SOURCE_DIR}/asset_list.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/asset_loader.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/asset_manager.cpp
 )
 
 add_subdirectory(ext)
