player to include, script loader

--- a/editor/scripting/comp/CMakeLists.txt
+++ b/editor/scripting/comp/CMakeLists.txt
@@ -1,3 +1,4 @@
 target_sources(ChokoEditor PRIVATE
 	${CMAKE_CURRENT_SOURCE_DIR}/script_dummy.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/script_dummy_loader.cpp
 )
