--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,7 @@
 target_sources(ChokoEngine PRIVATE
 	${CMAKE_CURRENT_SOURCE_DIR}/chokoengine.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/chokolait.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/chokoplayer.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/object_base.cpp
 )
 
@@ -10,6 +11,7 @@ add_subdirectory(backend)
 add_subdirectory(core)
 add_subdirectory(ext)
 add_subdirectory(parsers)
+add_subdirectory(player)
 add_subdirectory(scene)
 add_subdirectory(types)
 add_subdirectory(utils)
