--- a/resources/res/icons/icons_manifest.json
+++ b/resources/res/icons/icons_manifest.json
@@ -2,5 +2,6 @@
   "plus":"plus.png",
   "minus":"minus.png",
   "expanded":"expanded.png",
-  "collapsed":"collapsed.png"
+  "collapsed":"collapsed.png",
+  "logo":"logo_w.png"
 }
