--- a/editor/ui/overlay/CMakeLists.txt
+++ b/editor/ui/overlay/CMakeLists.txt
@@ -1,4 +1,5 @@
 target_sources(ChokoEditor PRIVATE
+	${CMAKE_CURRENT_SOURCE_DIR}/eo_addcomp.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/eo_dropdown.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/eo_colorpicker.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/eo_selectref.cpp
