--- a/editor/hooks/CMakeLists.txt
+++ b/editor/hooks/CMakeLists.txt
@@ -1,5 +1,5 @@
 target_sources(ChokoEditor PRIVATE
-	${CMAKE_CURRENT_SOURCE_DIR}/callback.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/callback_args.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/callback_caller.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/callback_manager.cpp
 )
