add project system files, lags on macos without 3 layers of uilayout

--- a/editor_files/project_template/default/CMakeLists.txt
+++ b/editor_files/project_template/default/CMakeLists.txt
@@ -1,16 +1,17 @@
-# CMake script for building ChokoEditor projects
+# CMake script for building ChokoEditor projects. DO NOT EDIT.
 # The following vars most be defined:
 #   
 # The following files must be available:
-#   ../cmake/FindChokoEngine.cmake
-#   ./game_scripts.cmake
+#   system/game_scripts.cmake
 
 cmake_minimum_required(VERSION 3.3)
 project (chokoeditor_project)
 
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/../cmake/")
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/../share")
 
 find_package(ChokoEngine REQUIRED)
+
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 if (MSVC)
 	SET(CMAKE_CXX_FLAGS "/EHsc /W3")
@@ -24,7 +25,14 @@ else()
 endif()
 endif()
 
-include_directories(${CE2_INCLUDE_DIRS})
+set(LIBS
+	${CE2_LIBRARIES}
+	${CE2_MODULE_LIB_AE}
+	${CE2_MODULE_LIB_PE}
+)
+
 add_executable(chokoeditor_project "")
-include(game_scripts.cmake)
-target_link_libraries(chokoeditor_project ${CE2_LIBRARIES})
+target_include_directories(chokoeditor_project PUBLIC ${CE2_INCLUDE_DIRS})
+include(system/system_scripts.cmake)
+include(system/game_scripts.cmake)
+target_link_libraries(chokoeditor_project ${LIBS})
