--- a/editor/ext/CMakeLists.txt
+++ b/editor/ext/CMakeLists.txt
@@ -1,4 +1,5 @@
 target_sources(ChokoEditor PRIVATE
 	${CMAKE_CURRENT_SOURCE_DIR}/ui_ext.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/ui_ext_debug.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/ui_ext_layout.cpp
 )
