object ops (add delete) fix scene->deleteobject

--- a/editor/scene/CMakeLists.txt
+++ b/editor/scene/CMakeLists.txt
@@ -2,3 +2,5 @@ target_sources(ChokoEditor PRIVATE
 	${CMAKE_CURRENT_SOURCE_DIR}/sceneinfo.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/scenemanager.cpp
 )
+
+add_subdirectory(ops)
