--- a/editor/scripting/CMakeLists.txt
+++ b/editor/scripting/CMakeLists.txt
@@ -1,4 +1,5 @@
 target_sources(ChokoEditor PRIVATE
+	${CMAKE_CURRENT_SOURCE_DIR}/loader_generator.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/script_val.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/scripting.cpp
 )
