use gend assettypestr, comptypestr

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -127,7 +127,9 @@ endif()
 add_subdirectory(src)
 
 set(enum_gen_strs
+	${PROJECT_SOURCE_DIR}/include/ce2/asset/enums/asset_types
 	${PROJECT_SOURCE_DIR}/include/ce2/core/enums/input_key
+	${PROJECT_SOURCE_DIR}/include/ce2/scene/enums/component_types
 )
 
 foreach (enumfl ${enum_gen_strs})
