--- a/src/asset/prefab/comp/CMakeLists.txt
+++ b/src/asset/prefab/comp/CMakeLists.txt
@@ -6,3 +6,5 @@ target_sources(ChokoEngine PRIVATE
 	${CMAKE_CURRENT_SOURCE_DIR}/rig.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/script.cpp
 )
+
+add_subdirectory(mesh)
