--- a/editor/ui/windows/CMakeLists.txt
+++ b/editor/ui/windows/CMakeLists.txt
@@ -1,4 +1,5 @@
 target_sources(ChokoEditor PRIVATE
+	${CMAKE_CURRENT_SOURCE_DIR}/ew_animgrapher.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/ew_browser.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/ew_gameview.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/ew_hierarchy.cpp
