--- a/editor/ui/windows/ops/CMakeLists.txt
+++ b/editor/ui/windows/ops/CMakeLists.txt
@@ -1,3 +1,4 @@
 target_sources(ChokoEditor PRIVATE
+	${CMAKE_CURRENT_SOURCE_DIR}/ew_animgrapher_ops.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/ew_sceneview_ops.cpp
 	)
