--- a/resources/res/icons/icons_manifest.json
+++ b/resources/res/icons/icons_manifest.json
@@ -3,5 +3,6 @@
   "minus":"minus.png",
   "expanded":"expanded.png",
   "collapsed":"collapsed.png",
-  "logo":"logo_w.png"
+  "logo":"logo_w.png",
+  "close":"close.png"
 }
