--- a/src/backend/rend/CMakeLists.txt
+++ b/src/backend/rend/CMakeLists.txt
@@ -1,6 +1,7 @@
 target_sources(ChokoEngine PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/renderer.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/renderer_lights.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/renderer_particles.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/renderer_probes.cpp
 )
 
