--- a/editor/ui/windows/inspector/comp/CMakeLists.txt
+++ b/editor/ui/windows/inspector/comp/CMakeLists.txt
@@ -4,6 +4,7 @@ target_sources(ChokoEditor PRIVATE
 	${CMAKE_CURRENT_SOURCE_DIR}/light.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/lightprobe.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/meshrenderer.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/particle_system.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/rig.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/script.cpp
 	)
