--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,6 +11,7 @@ add_subdirectory(backend)
 add_subdirectory(core)
 add_subdirectory(ext)
 add_subdirectory(parsers)
+add_subdirectory(physics)
 add_subdirectory(player)
 add_subdirectory(scene)
 add_subdirectory(types)
