--- a/editor/ui/windows/sceneview/CMakeLists.txt
+++ b/editor/ui/windows/sceneview/CMakeLists.txt
@@ -3,5 +3,7 @@ target_sources(ChokoEditor PRIVATE
 	${CMAKE_CURRENT_SOURCE_DIR}/draw_comp_list.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/camera.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/light.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/operator.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/resources.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/rig.cpp
 	)
