--- a/editor/CMakeLists.txt
+++ b/editor/CMakeLists.txt
@@ -10,6 +10,7 @@ add_subdirectory(exporters)
 add_subdirectory(ext)
 add_subdirectory(hooks)
 add_subdirectory(player)
+add_subdirectory(prefs)
 add_subdirectory(preview)
 add_subdirectory(res)
 add_subdirectory(scene)
