write material asset, pref ui 1, fix prefab counting indirect tree id

--- a/editor/prefs/CMakeLists.txt
+++ b/editor/prefs/CMakeLists.txt
@@ -1,3 +1,5 @@
 target_sources(ChokoEditor PRIVATE
+	${CMAKE_CURRENT_SOURCE_DIR}/preferences.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/colors.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/input.cpp
 )
