--- a/src/asset/prefab/comp/CMakeLists.txt
+++ b/src/asset/prefab/comp/CMakeLists.txt
@@ -3,7 +3,9 @@ target_sources(ChokoEngine PRIVATE
 	${CMAKE_CURRENT_SOURCE_DIR}/camera.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/collider.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/light.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/light_probe.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/mesh_renderer.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/particle_system.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/rig.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/rigidbody.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/script.cpp
