--- a/editor/ui/windows/sceneview/CMakeLists.txt
+++ b/editor/ui/windows/sceneview/CMakeLists.txt
@@ -4,6 +4,7 @@ target_sources(ChokoEditor PRIVATE
 	${CMAKE_CURRENT_SOURCE_DIR}/camera.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/light.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/operator.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/particle_system.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/resources.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/rig.cpp
 	)
