data stream class, build standaline ok

--- a/src/modules/assets_common/CMakeLists.txt
+++ b/src/modules/assets_common/CMakeLists.txt
@@ -1,4 +1,6 @@
 target_sources(Module_AssetCommon PRIVATE
+	${CMAKE_CURRENT_SOURCE_DIR}/animclip.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/animgraph.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/armature.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/shader.cpp
 )
